chore (docs): Add documentation for private endpoints
