# app/Http/Controllers/Api/V1/Admin/TravelController.php
@@ -7,8 +7,27 @@ use App\Http\Requests\TravelRequest;
 use App\Http\Resources\TravelResource;
 use App\Models\Travel;
 
+/**
+ * @group Admin endpoints
+ */
 class TravelController extends Controller
 {
+
+    /**
+     * POST Travel
+     *
+     * Creates a new Travel record.
+     *
+     * @authenticated
+     *
+     * @bodyParam is_public boolean. Example: "1"
+     * @bodyParam name string. Example: "My new travel"
+     * @bodyParam description string. Example: "a 5-days 4-nights city tour of Cuzco"
+     * @bodyParam number_of_days number. Example: "5"
+     *
+     * @response {"data":{"id":"996a36ca-2693-4901-9c55-7136e68d81d5","name":"My new travel 234","slug":"my-new-travel-234", ...}
+     * @response 422 {"message":"The name has already been taken.","errors":{"name":["The name has already been taken."]}}
+     */
     public function store(TravelRequest $request)
     {
         $travel = Travel::create($request->validated());
@@ -16,6 +35,21 @@ class TravelController extends Controller
         return new TravelResource($travel);
     }
 
+    /**
+     * PUT Travel
+     *
+     * Updates new Travel record.
+     *
+     * @authenticated
+     *
+     * @bodyParam is_public boolean.
+     * @bodyParam name string. Example: "My new travel"
+     * @bodyParam description string. Example: "a 5-days 4-nights city tour of Cuzco"
+     * @bodyParam number_of_days number. Example: "5"
+     *
+     * @response {"data":{"id":"996a36ca-2693-4901-9c55-7136e68d81d5","name":"My new travel 234", ...}
+     * @response 422 {"message":"The name has already been taken.","errors":{"name":["The name has already been taken."]}}
+     */
     public function update(Travel $travel, TravelRequest $request)
     {
         $travel->update($request->validated());
