# app/Http/Controllers/Api/V1/Auth/LoginController.php
@@ -8,10 +8,18 @@ use App\Models\User;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Hash;
 
+/**
+ * @group Auth endpoints
+ */
 class LoginController extends Controller
 {
     /**
-     * Handle the incoming request.
+     * POST Login
+     *
+     * Login with the existing user.
+     *
+     * @response {"access_token":"1|a9ZcYzIrLURVGx6Xe41HKj1CrNsxRxe4pLA2oISo"}
+     * @response 422 {"error": "The provided credentials are incorrect."}
      */
     public function __invoke(LoginRequest $request)
     {
